--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server.js",
-    "Go": "nodemon src/encript.js"
+    "start": "nodemon src/server.js"
   },
   "repository": {
     "type": "git",
